debathena-athinfo (10.1-0debathena2) UNRELEASED; urgency=low

  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:27 -0400

debathena-athinfo (10.1-0debathena1) unstable; urgency=low

  * Catch IOErrors (Trac #1214)
  * Use .writelines() instead of .write() with .read()
  * Bump Standards-Version

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 29 Aug 2012 17:31:00 -0400

debathena-athinfo (10.0.3-0debathena1) unstable; urgency=low

  * Rewrite in Python.
  * Add a -t option to specify a connection timeout.
  * Bump the debhelper compatibility level (no changes needed).
  * Bump the standards version (no changes needed).
  * Enable tab-completion for athrun. (Trac: #364)

 -- Evan Broder <broder@mit.edu>  Fri, 02 Apr 2010 17:55:03 -0400

debathena-athinfo (10.0.2-0debathena1) unstable; urgency=low

  [ Geoffrey Thomas ]
  * Update manpage to document new Debathena queries.

  [ Evan Broder ]
  * Bump the upstream version number.

 -- Evan Broder <broder@mit.edu>  Wed, 31 Mar 2010 23:55:18 -0400

debathena-athinfo (10.0.1-0debathena1) unstable; urgency=low

  * Update manpage to document Debathena's queries (Trac: #180).

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 11 Apr 2009 19:24:46 -0400

debathena-athinfo (10.0.0-0debathena1) unstable; urgency=low

  * Change DEB_AUTO_UPDATE_AUTOCONF to 2.50, not 1.
  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 14:18:25 -0500

debathena-athinfo (9.4.27-0debathena4) unstable; urgency=low

  * Section: debathena/net.

 -- Anders Kaseorg <andersk@mit.edu>  Tue, 17 Jul 2007 06:33:32 -0400

debathena-athinfo (9.4.27-0debathena3) unstable; urgency=low

  * Depends: netbase.
