@@ -1,6 +1,0 @@
-dnl Process this file with autoconf to produce a configure script.
-AC_INIT(athinfo)
-
-AC_PROG_INSTALL
-
-AC_OUTPUT(Makefile)
