@@ -1,0 +1,10 @@
+#!/usr/bin/python
+
+from distutils.core import setup
+
+setup(name='athinfo',
+      version='10.1',
+      description='Retrieve information about Athena workstations',
+      author='Evan Broder',
+      scripts=['athinfo']
+    )
